egov/egov-egiweb/src/main/webapp/resources/global/css/egov/custom.css
/* ... */
.multilevelpushmenu_wrapper li a.search-a #search-input{
	padding:10px 4px; 
	color:#fff;
	font-size: 13px;
	line-height: 25px;
	background-color: #f58720;
	font-family: regular;
}

.multilevelpushmenu_wrapper .floatRight.fa-search {
	padding-right: 8px;
	padding-top: 15px;
	font-size:13px;
}

.rounded-notify{
	font-size: 10px;
	float:right;
	color: #fff;
	background: #f2851f;
	border-radius: 10px;
	text-align: center;
	border:1px solid #6b4f2c;
}

.multilevelpushmenu_wrapper .ltr.multilevelpushmenu_inactive
{
	background: #6b4f2c;
}

ul li a span{
	padding:0 5px;
}

.multilevelpushmenu_wrapper .floatLeft
{
	padding-right:8px;
}

.multilevelpushmenu_wrapper li#position-bottom-level1
{
	position:absolute;
	width:100%;
	bottom:0;
}

.multilevelpushmenu_wrapper li#position-bottom-level2
{
	position:absolute;
	width:100%;
	border-top: 1px solid #573b1e;
	bottom:37px;
}

.multilevelpushmenu_wrapper{
	position:fixed;
	top:63px;
}

.multilevelpushmenu_wrapper ul{
	font-family:regular;
	border-top: 1px solid #573b1e;
}

.multilevelpushmenu_wrapper ul::-webkit-scrollbar{
	width:5px;
	background-color:#f2851f;
} 

.multilevelpushmenu_wrapper ul::-webkit-scrollbar-thumb{
	background-color:#f2851f;
	border-radius:10px;
}
.multilevelpushmenu_wrapper ul::-webkit-scrollbar-thumb:hover{
	background-color:#f2851f;
}
.multilevelpushmenu_wrapper ul::-webkit-scrollbar-thumb:active{
	background-color:#f2851f;
} 
.multilevelpushmenu_wrapper ul::-webkit-scrollbar-track{
	border:1px gray solid;
	border-radius:10px;
	-webkit-box-shadow:0 0 6px gray inset;
} 

.navbar-right
{
	margin:0;
}

.remove-favourite
{
	font-size:18px;
}

.profile-name{
	white-space: nowrap;overflow: hidden;width:120px;text-overflow: ellipsis;
}

.added-as-fav{
	color:yellow;
}

.view-content{
	font-family:semibold;
}

#sortby_drop
{
	float:right;
}

.header-color{
	color: #f2851f;
}

.modal-dialog.history{
  width: 768px; 
}

.history-size{
	font-size:20px;
}

#official_inbox tbody, #official_drafts tbody, #official_notify tbody{
	font-size:13px;
}

.notificaton-card .msg{
	padding:5px 15px;
}

.msg header span.sender{
	margin:0;
	font-size:15px;
	font-family:semibold;
}

.msg header .msg-info.notify {
  padding-left: 0px;
}

.msg-content > p.notify {
  margin: 5px 20px 0px 0px;
}

#normal .centerMarker{
position:absolute;
/*url of the marker*/
background:url(http://maps.gstatic.com/mapfiles/markers2/marker.png) no-repeat;
/*center the marker*/
top:50%;left:50%;
z-index:1;
/*fix offset when needed*/
margin-left:-10px;
margin-top:-34px;
/*size of the image*/
height:34px;
width:20px;
cursor:pointer;
}

.table-div-border{
  border-bottom: 1px solid #ccc;
border-top: 1px solid #ccc;
}

.table-div-column{
  padding: 10px;
  text-align: center;
}

.parallel-actions{
 padding:0 5px;
 cursor:pointer;
}

.form-group .input-group .input-group-addon{
	cursor:pointer;
}

.form-group .input-group .input-group-addon i{
	color:#fff;
}
.g-recaptcha div { margin: auto}

table.dataTable.nopointer tbody tr:hover {
cursor:auto;
}

